--- a/Marketplace/score.web/src/main/webapp/listScore.html
+++ b/Marketplace/score.web/src/main/webapp/listScore.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="css/datepicker.css">
         <script>
             loadComponents = [
-            {
-                    name: 'component/scoreSelect', 
+                {
+                    name: 'component/scoreSelect',
                     render: true,
                     domElementId: 'main'
-            }
+                }
             ];
         </script>
         <script src="./js/vendor/jquery-1.9.1.js"></script>
@@ -22,6 +22,15 @@
         <script src="./js/vendor/backbone.paginator.min.js"></script>
         <script src="./js/vendor/bootstrap-datepicker.js"></script>
         <script data-main="src/main" src="./js/vendor/require.js"></script>
+        <style>
+            .container {
+                top: 30px;
+                position: relative;
+            }
+            .btn-xs {
+                display: none;
+            }
+        </style>
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
           <script src="../../assets/js/html5shiv.js"></script>
